第三次嘗試更新
不斷出現錯誤。這次嘗試更新layout.ejs,header 部份

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -56,49 +56,18 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="container-fulid">
-            <div style="display: flex;">
-                <a href="#">
-                    <img src="http://220.128.125.40/images/librenms_logo_light.svg" class="logo" alt="LibreNMS">
-                </a>
-                <nav class="main-nav">
-                    <ul class="main-nav-list">
-                        <li>
-                            <a href="#"><i class="fa fa-university" aria-hidden="true"></i>資產管理</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-university" aria-hidden="true"></i>告警管理</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-bar-chart" aria-hidden="true"></i>統計分析</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-university" aria-hidden="true"></i>報表匯出 </a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-university" aria-hidden="true"></i>系統權限</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="header-account">
-            <ul class="account-lgoinBox">
-                <li>
-                <a href="index.html" class="login dropdown">
-                    <i class="fa fa-user login" aria-hidden="true"></i>admin
-                </a>
-                <ul class="dropdown-open">
-                    <li><a href="#">test3-1</a></li>
-                    <li><a href="#">test3-2</a></li>
+    <header class="header">
+        <div class="container header-content">
+            <nav>
+                <ul class="ul-list">
+                    <li><a href="index.html" class="logo"></a></li>
+                    <li><a href="index.html" class="">1</a></li>
+                    <li><a href="resize.html" class="">2</a></li>
                 </ul>
-                </li>
-            </ul>
-            </div>
-            <!-- <form class="header-search">
-                <input type="search" name="" id="">
-                <button><i class="fa fa-search"></i></button>
-            </form> -->
+                <ul class="ul-list">
+                    <li><a href="#" class="">login</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     
